--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/db_challenge_techforb?serverTimezone=America/Argentina/Buenos_Aires&useSSL=false
+spring.datasource.url=mysql://root:ljLecHMfCUfXsnyyNDOm@containers-us-west-1.railway.app:6818/railway
 spring.datasource.username=root
-spring.datasource.password=sasa
+spring.datasource.password=ljLecHMfCUfXsnyyNDOm
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
