--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=mysql://root:ljLecHMfCUfXsnyyNDOm@containers-us-west-1.railway.app:6818/railway
+spring.datasource.url=jdbc:mysql://34.123.119.192:3306/techdb
 spring.datasource.username=root
-spring.datasource.password=ljLecHMfCUfXsnyyNDOm
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
