--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ logging.level.org.hibernate.SQL=debug
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 springdoc.swagger-ui.path=/
-server.ssl.enabled=true
+#server.ssl.enabled=true
